--- a/todo-list/public/index.html
+++ b/todo-list/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="google-signin-client_id" content="276668573212-m1i25rgep0dbc3b8vj3gd89ulk08pjal.apps.googleusercontent.com">
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -28,6 +29,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
